hw01/k8s/deployment.yml
apiVersion: v1
kind: Namespace
metadata:
  name: otus-arch-hw01

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: health-test-ingress
  namespace: otus-arch-hw01
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  defaultBackend:
    service:
      name: health-test-service
      port:
        number: 8000
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: health-test-service
                port:
                  number: 8000
          - path: /otusapp/andrey/?(.*)
            pathType: Prefix
            backend:
              service:
                name: health-test-service
                port:
                  number: 8000

---

apiVersion: v1
kind: Service
metadata:
  name: health-test-service
  namespace: otus-arch-hw01
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
  selector:
    app: health-test

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: health-test-deployment
  namespace: otus-arch-hw01
  labels:
    app: health-test
spec:
  selector:
    matchLabels:
      app: health-test
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: health-test
    spec:
      containers:            
        - image: andreyp123/health-test:0.2
          name: health-test
          ports:
            - containerPort: 8000
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              port: 8000
              path: /health
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 20
